# OpenKey

./: .gitignore  CMakeLists.txt  PACKAGING.md  README.md  omp.cache  scratch.cpp
.github/workflows/: msbuild.yml  package-linux.yml
Sources/OpenKey/engine/: ConvertTool.cpp  Engine.cpp  Engine.h
extension/: README.md  install.sh
extension/gnome42-44/openkey-bridge@openkey.dev/: extension.js  metadata.json
extension/gnome45-50/openkey-bridge@openkey.dev/: extension.js  metadata.json
packaging/debian/: postinst  postrm
scripts/: install.sh  reinstall_fcitx5.sh  uninstall.sh
src/: openkey-addon.conf.in.in  openkey.conf.in  openkey.cpp  openkey.h  openkey_adapter.cpp  openkey_adapter.h  openkey_backspace_mode_handler.cpp  openkey_backspace_mode_handler.h  openkey_config.h  openkey_engine_globals.cpp  openkey_fcitx_context.cpp  openkey_fcitx_context.h  openkey_platform.h  openkey_state.h  openkey_text_mode_handler.cpp  openkey_text_mode_handler.h  openkey_uinput_server.cpp  surrounding_text_utils.cpp  surrounding_text_utils.h
systemd/: openkey-uinput-server@.service
tests/: CMakeLists.txt  test_openkey_adapter.cpp
tools/openkey-nonpreedit-server/: README.md  go.mod  main.go
